Afegint el view del inventari

--- a/ikarus_base/ikarus_base/templates/base.html
+++ b/ikarus_base/ikarus_base/templates/base.html
@@ -30,6 +30,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     		<p>Wellcome {{ user.username }} </p>
 	    	<a id="link" href="/accounts/logout/">Log Out</a>
 	    	<a id="link" href="/profile">Profile</a>
+	    	<a id="link" href="/inventory">Inventari</a>
 	    	{% else %}
 	    	<a id="link" href="/accounts/login/">Sign In</a>
 	    	{% endif %}
