--- a/ikarus_base/ikarus_base/templates/profile.html
+++ b/ikarus_base/ikarus_base/templates/profile.html
@@ -4,14 +4,14 @@
 
 {% if form.errors %}
 {% endif %}
-
+<h3>Profile Page</h3>
 <ul>
 	<li>Referencia de client : {{ ref_client }}</li>
 	<li>Nom : {{ Nom }}</li>
 	<li>Cognom : {{ Cognoms }}</li>
 	<li>Rating : {{ rating }}</li>
 	<li>Location : {{ location }}</li>
-	<li>Inventory : {{ inventory }}</li>
+
 
 </ul>
 
