afegint solicitud de posicio

--- a/ikarus_base/ikarus_base/templates/profile.html
+++ b/ikarus_base/ikarus_base/templates/profile.html
@@ -11,6 +11,7 @@
 	<li>Cognom : {{ Cognoms }}</li>
 	<li>Rating : {{ rating }}</li>
 	<li>Location : {{ location }}</li>
+	<li>Avatar : <img src={{client.avatar.url}} width="100px" height="100px"></li>
 
 
 </ul>
