--- a/ikarus_base/ikarus_base/templates/base.html
+++ b/ikarus_base/ikarus_base/templates/base.html
@@ -18,6 +18,36 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   </head>
 
   <body>
+	<div class="menu-content">
+		<div class="menu">
+			<div class="logo">
+				<img src="images/logo.png" />
+			</div>
+			<ul>
+				<li>
+					<a href="/">Portada</a>
+				</li>
+				<li>
+					Coleccions
+				</li>
+				<li>
+					Ranking
+				</li>
+				<li>
+					Contacte
+				</li>
+				<li>
+					Ajuda
+				</li>
+				<li>
+					<a href="/accounts/login/">Sign-in</a>
+				</li>
+			</ul>
+			<div class="letras">
+				<img src="images/letras.png" />
+			</div>
+		</div>
+	</div>
     <div id="nav-top-hor">
     	<div id="nav-top-hor-left">
     		<a id="link" href="/">Inici</a>
