ok, fet pel richi

--- a/ikarus_base/ikarus_base/templates/base.html
+++ b/ikarus_base/ikarus_base/templates/base.html
@@ -10,7 +10,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 
     {% block css %}
     {% endblock %}
-
+	<link rel="stylesheet" href="{{STATIC_URL}}css/theme.css"/>
     {% block preload_js %}
     {% endblock %}
 
