Aplicant el Tema de la web

--- a/ikarus_base/ikarus_base/templates/base.html
+++ b/ikarus_base/ikarus_base/templates/base.html
@@ -21,7 +21,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 	<div class="menu-content">
 		<div class="menu">
 			<div class="logo">
-				<img src="images/logo.png" />
+				<img src="{{STATIC_URL}}images/logo.png" />
 			</div>
 			<ul>
 				<li>
@@ -44,7 +44,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 				</li>
 			</ul>
 			<div class="letras">
-				<img src="images/letras.png" />
+				<img src="{{STATIC_URL}}images/letras.png" />
 			</div>
 		</div>
 	</div>
