--- a/ikarus_base/static/css/theme.css
+++ b/ikarus_base/static/css/theme.css
@@ -55,6 +55,15 @@ div.menu-content ul li {
 	color: #404040;
 	transition: all 0.2s;
 	text-shadow: #C5C1C1 2px 2px;
+	text-decoration: none;
+}
+div.menu-content ul li a {
+	font-size: 12px;
+	font-family: Arial;
+	font-weight: bold;
+	color: #404040;
+	text-shadow: #C5C1C1 2px 2px;
+	text-decoration: none;
 }
 div.menu-content ul li:hover {
 	border-top: 5px solid #333;
@@ -322,16 +331,27 @@ div.footer-content {
 	width: 25%;
 	float: left;
 }
-.lacetania {
-	width: 60px;
+.logo-footer {
+	height: 45px;
 }
 .img-footer {
 	float: right;
-	margin: 7px 0 0 0;
+	margin: 7px 0 0 10px;
 }
 .text-footer {
 	float: left;
 	position: absolute;
 	bottom: -53px;
 	color: white;
+	font-family: Arial;
+	font-weight: bold;
+	font-size: 12px;
+	text-shadow: 1px 4px 2px #000, 1px 2px 2px #5E5E5E;
+}
+div.welcome {
+	float: right;
+	font-size: 13px;
+	margin: 4px 0 0 0;
+	color: rgb(202, 157, 77);
+}
 }
