--- a/ikarus_base/ikarus_base/templates/inventory.html
+++ b/ikarus_base/ikarus_base/templates/inventory.html
@@ -5,13 +5,17 @@
 {% if form.errors %}
 {% endif %}
 <h3>Inventari</h3>
-<ul>
-	<li>Objectes : {{ inventari }}</li>
 
-</ul>
+{% for a in dicionari.items %}
+	<ul>
+	<li>Nom: {{a.1.0}}</li>
+	<li>Description: {{a.1.1}}</li>
+	<li>Arxiu: {{a.1.2}}</li>
+	<li>Latitude: {{a.1.3}}</li>
+	<li>Longitude: {{a.1.4}}</li>
+	</ul>
 
-
-
+{% endfor %}
 
 
 
