--- a/ikarus_base/ikarus_base/templates/inventory.html
+++ b/ikarus_base/ikarus_base/templates/inventory.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+	{% extends "base.html" %}
 
 {% block content %}
 
@@ -8,11 +8,13 @@
 
 {% for a in dicionari.items %}
 	<ul>
-	<li>Nom: {{a.1.0}}</li>
+	<li>Nom: {{a.1.0}} agfasvkjhask.vhabslgkjasgv.lsjakhlwfbglkashfbgalkshgaslkg  <input type="radio" name="model" id="r1" onchange="installModel('{{a.1.2}}',0)"></li> 
 	<li>Description: {{a.1.1}}</li>
 	<li>Arxiu: {{a.1.2}} </li>
 	<li>Latitude: {{a.1.3}}</li>
 	<li>Longitude: {{a.1.4}}</li>
+	<li>
+</li>
 	</ul>
 
 {% endfor %}
