--- a/ikarus_base/ikarus_base/templates/profile.html
+++ b/ikarus_base/ikarus_base/templates/profile.html
@@ -6,6 +6,7 @@
 {% endif %}
 <h3>Profile Page</h3>
 <ul>
+{{ "Mary had a little"|stringformat:"s lamb." }}
 	<li>Referencia de client : {{ ref_client }}</li>
 	<li>Nom : {{ Nom }}</li>
 	<li>Cognom : {{ Cognoms }}</li>
