--- a/ikarus_base/ikarus_base/templates/map.html
+++ b/ikarus_base/ikarus_base/templates/map.html
@@ -7,7 +7,8 @@
 <h3>Mapa </h3>
     <style>
       html, body, #map-canvas {
-        height: 100%;
+        height: 400px;
+        width: 400px;
         margin: 0px;
         padding: 0px
       }
