--- a/ikarus_base/ikarus_base/templates/map.html
+++ b/ikarus_base/ikarus_base/templates/map.html
@@ -8,7 +8,7 @@
     <style>
       html, body, #map-canvas {
         height: 400px;
-        width: 400px;
+        width: 400px;	
         margin: 0px;
         padding: 0px
       }
@@ -31,6 +31,11 @@
 // your markers' animation.
 
 var berlin = new google.maps.LatLng(41.731335, 1.831175);
+
+
+alert(lista.length());
+
+
 
 var neighborhoods = [
   new google.maps.LatLng(41.735326, 1.825336),
