--- a/ikarus_base/ikarus_base/templates/map.html
+++ b/ikarus_base/ikarus_base/templates/map.html
@@ -33,7 +33,11 @@
 var berlin = new google.maps.LatLng(41.731335, 1.831175);
 
 
+
+
+
 console.log("{{lista.1}}");
+console.log("{{longitud_lista}}")
 
 
 
