--- a/ikarus_base/ikarus_base/templates/map.html
+++ b/ikarus_base/ikarus_base/templates/map.html
@@ -46,17 +46,17 @@ for (var i=0; i<longitud_lista; i++){
 */
 console.log("{{lista.1}}");
 console.log("{{longitud_lista}}");
-console.log(neighborhoods);
+/*console.log(neighborhoods);*/
 
 
-
+/*
 var neighborhoods = [
   new google.maps.LatLng(41.735326, 1.825336),
   new google.maps.LatLng(41.735871, 1.831537),
   new google.maps.LatLng(41.739809, 1.826473),
   new google.maps.LatLng(41.739067, 1.833177)
 ];
-
+*/
 var markers = [];
 var iterator = 0;
 
