--- a/ikarus_base/ikarus_base/templates/base.html
+++ b/ikarus_base/ikarus_base/templates/base.html
@@ -59,7 +59,7 @@ lang="{% firstof LANGUAGE_CODE 'en' %}">
 						Contacte
 					</li>
 					<li>
-						<a href="/manual"> Ajuda s</a>
+						<a href="/manual_tecnic"> Ajuda s</a>
 					</li>
 					{% if user.is_authenticated %}
 					<li>
