--- a/ikarus_base/ikarus_base/templates/map.html
+++ b/ikarus_base/ikarus_base/templates/map.html
@@ -1,28 +1,9 @@
 {% extends "base.html" %}
-
+{% block title %}Mapa{% endblock %}
 {% block content %}
 
 {% if form.errors %}
 {% endif %}
-<h3>Mapa </h3>
-    <style>
-      html, body, #map-canvas {
-        height: 400px;
-        width: 400px;	
-        margin: 0px;
-        padding: 0px
-      }
-      #panel {
-        position: absolute;
-        top: 5px;
-        left: 50%;
-        margin-left: -180px;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-      }
-    </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <script>
 // If you're adding a number of markers, you may want to
@@ -95,15 +76,6 @@ function addMarker() {
 google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
-  </head>
-  <body>
     <div id="map-canvas"></div>
-  </body>
-
-
-
-
-
-
 
 {% endblock %}
