fent la pagina de register i la pagna de error en cas de que el usuari no existeix o no estigui actiu

--- a/ikarus_base/ikarus_base/templates/base.html
+++ b/ikarus_base/ikarus_base/templates/base.html
@@ -6,7 +6,7 @@ dir="{% if LANGUAGE_BIDI %}rtl{% else %}ltr{% endif %}"
 xml:lang="{% firstof LANGUAGE_CODE 'en' %}"
 lang="{% firstof LANGUAGE_CODE 'en' %}">
 	<head>
-		<title>{% block title %}{% endblock %} - Nonrel-testapp</title>
+		<title>{% block title %}{% endblock %} Ikarus App</title>
 
 		{% block css %}
 		{% endblock %}
