--- a/ikarus_base/ikarus_base/templates/ayuda.html
+++ b/ikarus_base/ikarus_base/templates/ayuda.html
@@ -4,8 +4,12 @@
 
 {% if form.errors %}
 {% endif %}
-<h3>Ayuda </h3>
-
+<div style="position:relative;float:left;margin:10px 0 10px 0; width:49%; min-height:calc(100vh - 200px); background-color:red;">
+	
+</div>
+<div style="position:relative;float:right;margin:10px 0 10px 0; width:49%; min-height:calc(100vh - 200px); background-color:red;">
+	
+</div>
 
 
 
