--- a/ikarus_base/ikarus_base/templates/ayuda.html
+++ b/ikarus_base/ikarus_base/templates/ayuda.html
@@ -4,11 +4,11 @@
 
 {% if form.errors %}
 {% endif %}
-<div style="position:relative;float:left;margin:10px 0 10px 0; width:49%; min-height:calc(100vh - 200px); background-color:red;">
-	
+<div style="position:relative;float:left;text-align:center;margin:10px 0 10px 0; width:49%; min-height:calc(100vh - 200px); background-color:red;">
+	<img src="{{STATIC_URL}}images/mobil.png" style="margin:0 auto;"/>
 </div>
-<div style="position:relative;float:right;margin:10px 0 10px 0; width:49%; min-height:calc(100vh - 200px); background-color:red;">
-	
+<div style="position:relative;float:right;text-align:center;margin:10px 0 10px 0; width:49%; min-height:calc(100vh - 200px); background-color:red;">
+	<img src="{{STATIC_URL}}images/ordinador.png" style="width: 200px; margin: 0 auto;" />
 </div>
 
 
