--- a/ikarus_base/ikarus_base/templates/registration/register.html
+++ b/ikarus_base/ikarus_base/templates/registration/register.html
@@ -7,6 +7,6 @@
 
   <form action="" method="post">
       {{ form.as_p }}
-      <input type="submit" value="Create the account">
+      <input type="submit" value="Crea Compte">
   </form>
 {% endblock %}
