--- a/ikarus_base/ikarus_base/templates/contact.html
+++ b/ikarus_base/ikarus_base/templates/contact.html
@@ -4,7 +4,7 @@
 
 
 
-<form action="/contact/" method="post">{% csrf_token %}
+<form class="contact" action="/contact/" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
