--- a/ikarus_base/ikarus_base/templates/ayuda.html
+++ b/ikarus_base/ikarus_base/templates/ayuda.html
@@ -4,17 +4,26 @@
 
 {% if form.errors %}
 {% endif %}
-<div style="position:relative;float:left;text-align:center;margin:10px 0 10px 0; width:49%; min-height:calc(100vh - 200px); background-color:red;">
-	<img src="{{STATIC_URL}}images/mobil.png" style="margin:0 auto;"/>
+<div class="content-manual">
+	<div class="content-manual-img">
+	<img src="{{STATIC_URL}}images/mobil.png" class="img-mobil" />
+	</div>
+	<div class="content-text-manual">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porttitor ultricies quam at lacinia. Mauris et massa ornare odio porttitor hendrerit. Sed urna nulla, feugiat vitae dui eget, tempus blandit massa. Nam commodo dapibus leo, vel imperdiet velit malesuada vitae. Etiam nec faucibus mauris. Vivamus nulla lacus, convallis in justo a, varius interdum libero. Nulla dapibus dolor sit amet quam pulvinar, eu sollicitudin ante eleifend. In hac habitasse platea dictumst. Nulla aliquet, libero nec posuere ultrices, ante nisi ultricies nisi, malesuada lacinia leo felis vitae mauris. Curabitur ut turpis libero. Maecenas pretium, enim nec ornare tristique, nisl neque placerat quam, vitae dictum purus nunc eu tortor.</p>
+
+		<p>Phasellus a condimentum diam. Vivamus at rutrum massa, sit amet imperdiet nulla. Vivamus feugiat orci id orci euismod, in pharetra arcu vestibulum. Phasellus at sem ullamcorper, vulputate lorem ut, elementum orci. Nullam sit amet aliquam nulla, nec sagittis purus. Cras velit lorem, lobortis vel blandit eu, scelerisque in arcu. In eget sollicitudin odio, nec imperdiet mi. Morbi congue placerat suscipit. Sed rhoncus ultrices turpis vel semper. Praesent ipsum nulla, vestibulum in urna a, condimentum semper urna. Aenean eget libero sed arcu scelerisque pretium non quis nunc. Proin eget leo ut justo tincidunt blandit convallis in augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vitae viverra elit.</p>
+	</div>
+	<a href="{{STATIC_URL}}documents/manual-usuari-app.pdf" target="_blank">Manual d'Usuari App</a>
 </div>
-<div style="position:relative;float:right;text-align:center;margin:10px 0 10px 0; width:49%; min-height:calc(100vh - 200px); background-color:red;">
-	<img src="{{STATIC_URL}}images/ordinador.png" style="width: 200px; margin: 0 auto;" />
+<div class="content-manual float-right">
+	<div class="content-manual-img">
+	<img src="{{STATIC_URL}}images/ordinador.png" class="img-pc"/>
+	</div>
+	<div class="content-text-manual">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porttitor ultricies quam at lacinia. Mauris et massa ornare odio porttitor hendrerit. Sed urna nulla, feugiat vitae dui eget, tempus blandit massa. Nam commodo dapibus leo, vel imperdiet velit malesuada vitae. Etiam nec faucibus mauris. Vivamus nulla lacus, convallis in justo a, varius interdum libero. Nulla dapibus dolor sit amet quam pulvinar, eu sollicitudin ante eleifend. In hac habitasse platea dictumst. Nulla aliquet, libero nec posuere ultrices, ante nisi ultricies nisi, malesuada lacinia leo felis vitae mauris. Curabitur ut turpis libero. Maecenas pretium, enim nec ornare tristique, nisl neque placerat quam, vitae dictum purus nunc eu tortor.</p>
+
+		<p>Phasellus a condimentum diam. Vivamus at rutrum massa, sit amet imperdiet nulla. Vivamus feugiat orci id orci euismod, in pharetra arcu vestibulum. Phasellus at sem ullamcorper, vulputate lorem ut, elementum orci. Nullam sit amet aliquam nulla, nec sagittis purus. Cras velit lorem, lobortis vel blandit eu, scelerisque in arcu. In eget sollicitudin odio, nec imperdiet mi. Morbi congue placerat suscipit. Sed rhoncus ultrices turpis vel semper. Praesent ipsum nulla, vestibulum in urna a, condimentum semper urna. Aenean eget libero sed arcu scelerisque pretium non quis nunc. Proin eget leo ut justo tincidunt blandit convallis in augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vitae viverra elit.</p>
+	</div>
+	<a href="{{STATIC_URL}}documents/manual-usuari-web.pdf" target="_blank">Manual d'Usuari Web</a>
 </div>
-
-
-
-
-
-
-
 {% endblock %}
