--- a/ikarus_base/static/css/theme.css
+++ b/ikarus_base/static/css/theme.css
@@ -1,6 +1,7 @@
 body {
 }
 body, html {
+	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 	padding: 0;
 	height: calc( 100% - 80px );
@@ -101,7 +102,7 @@ div.content .desc {
 	width: calc( 100% - 250px );
 	font-family: Georgia;
 	font-size: 15px;
-	margin: 10px 0 0 250px;
+	margin: 10px 0 10px 250px;
 	line-height: 25px;
 }
 div.content .title {
@@ -324,6 +325,10 @@ div.footer-content {
 	width: 25%;
 	float: left;
 }
+
+/*/////////////////////////////////////////////////////////////////////*/
+/*/////////////////////////////// FOOTER //////////////////////////////*/
+
 .logo-footer {
 	height: 45px;
 }
@@ -370,10 +375,105 @@ div.content-loader {
 	margin: 10px 0 0 0;
 	padding: 0px;
 }
-.canvas-inventory{
-	position:relative !important;
-	width:auto !important;
-	height:auto !important;
-	left:auto !important;
-	margin:0 !important;
+.canvas-inventory {
+	position: relative !important;
+	width: auto !important;
+	height: auto !important;
+	left: auto !important;
+	margin: 0 !important;
+}
+.img-mobil {
+	margin: 0 auto;
+}
+.img-pc {
+	width: 200px;
+	margin: 0 auto;
+}
+.content-manual {
+	position: relative;
+	float: left;
+	text-align: center;
+	margin: 10px 0 10px 0;
+	width: 49%;
+	min-height: calc(100vh - 200px);
+	background-color: rgba(255, 255, 255, 0.04);
+}
+.content-manual-img {
+	width: 100vh;
+	height: 190px;
+	display: table-cell;
+	vertical-align: middle;
+}
+.content-text-manual {
+	margin: 10px 10px;
+	text-align: justify;
+}
+.float-right {
+	float: right;
+}
+.content-manual a, .form-register  input[type='submit'] {
+	float: right;
+	margin: 10px;
+	padding: 3px 25px;
+	background-color: rgb(255, 160, 39);
+	text-decoration: none;
+	font-family: Arial;
+	font-size: 12px;
+	border-radius: 4px;
+	color: black;
+	box-shadow: 1px 2px 1px rgb(109, 87, 0);
+	font-weight: bold;
+	border:none;
+}
+.content-manual a:hover, .form-register  input[type='submit']:hover {
+	box-shadow: none;
+	margin: 12px 10px 8px 10px;
+	cursor: pointer;
+}
+.contact {
+	min-height: calc( 100vh - 220px );
+	margin: 10px auto;
+	padding: 10px;
+	background-color: rgba(255, 255, 255, 0.04);
+	width: 480px;
+	overflow: auto;
+}
+
+.contact p {
+	width: 450px;
+	overflow: auto;
+}
+.contact textarea, .contact input {
+	width: 350px;
+	float: right;
+}
+.contact input[type='submit']{
+	width: auto;
+	float: left;
+	margin: 0px 10px 10px 360px;
+	padding: 3px 25px;
+	background-color: rgb(255, 160, 39);
+	text-decoration: none;
+	font-family: Arial;
+	font-size: 12px;
+	border-radius: 4px;
+	color: black;
+	box-shadow: 1px 2px 1px rgb(109, 87, 0);
+	font-weight: bold;
+	border: none;
+}
+.contact input[type='submit']:hover{
+	box-shadow: none;
+	margin: 2px 10px 8px 360px;
+	cursor: pointer;
+}
+.errorlist{
+	list-style:none;
+	background-color: rgba(155, 0, 0, 0.38);
+	padding: 5px;
+}
+.form-register {
+	margin: 10% auto 10px auto;
+	padding:10px;
+	background-color: rgba(255, 255, 255, 0.04);
 }
