--- a/ikarus_base/ikarus_base/templates/home.html
+++ b/ikarus_base/ikarus_base/templates/home.html
@@ -12,10 +12,10 @@
 		<input type="radio" name="slide" class="control" id="Slide4"/>
 		<label for="Slide4" id="s4"></label>
 		<div class="overflow-wrapper">
-			<a class="slide" href=""><img src="http://i.imgur.com/hKju1EC.jpg"/></a>
-			<a class="slide" href=""><img src="http://i.imgur.com/hKju1EC.jpg"/></a>
-			<a class="slide" href=""><img src="http://i.imgur.com/hKju1EC.jpg"/></a>
-			<a class="slide" href=""><img src="http://i.imgur.com/hKju1EC.jpg"/></a>
+			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_2.jpg"/></a>
+			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_3.jpg"/></a>
+			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_4.jpg"/></a>
+			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_1.jpg"/></a>
 		</div>
 	</div>
 </div>
