--- a/ikarus_base/ikarus_base/templates/registration/login.html
+++ b/ikarus_base/ikarus_base/templates/registration/login.html
@@ -14,7 +14,10 @@
     <td>{{ form.password }}</td>
 </tr>
 <tr>
-	<td><input type="submit" value="login" /></td>
+	<td colspan="2"><input type="submit" value="login" /></td>
+</tr>
+<tr>
+	<td colspan="2"><a href="/register" />Registrar-se</td>
 </tr> 
 </table>
 <input type="hidden" name="next" value="{{ next }}" />
