--- a/ikarus_base/ikarus_base/templates/registration/registration_successful.html
+++ b/ikarus_base/ikarus_base/templates/registration/registration_successful.html
@@ -3,7 +3,7 @@
 {% block title %}Create an account{% endblock %}
 
 {% block content %}
-  <h1>Compte creat </h1>
-  <h3>En curt temps un dels nostres administradors es posara en contacte amb vosaltres. Moltes Gracies per la seva colaboracio.</h3>
+  <h1 class="register-ok">Compte creat </h1>
+  <h3 class="register-ok-desc">En curt temps un dels nostres administradors es posara en contacte amb vosaltres. Moltes Gracies per la seva colaboracio.</h3>
 
 {% endblock %}
