--- a/ikarus_base/ikarus_base/templates/registration/register.html
+++ b/ikarus_base/ikarus_base/templates/registration/register.html
@@ -3,9 +3,7 @@
 {% block title %}Create an account{% endblock %}
 
 {% block content %}
-  <h1>Create an account</h1>
-
-  <form action="" method="post">
+  <form action="" class="contact regist" method="post">
       {{ form.as_p }}
       <input type="submit" value="Crea Compte">
   </form>
